# boost_locale

./: CMakeLists.txt  Jamroot  KNOWN-ISSUES  README  boost-build.jam  readme.txt
boost/: locale.hpp
boost/locale/: boundary.hpp  codepage.hpp  codepage_conversion_stream.hpp  collate.hpp  collator.hpp  config.hpp  conversion.hpp  converter.hpp  date_time.hpp  date_time_facet.hpp  date_time_impl.hpp  encoding.hpp  factory.hpp  format.hpp  formatter.hpp  formatting.hpp  generator.hpp  gnu_gettext.hpp  hold_ptr.hpp  icu.hpp  info.hpp  localization_backend.hpp  message.hpp  numeric.hpp  text.hpp  time_zone.hpp  timezone.hpp  util.hpp
boost/locale/boundary/: bound.hpp  boundary_point.hpp  facets.hpp  index.hpp  segment.hpp  token.hpp  types.hpp
lib/locale/: CMakeLists.txt
lib/locale/src/: collate.cpp  collator.cpp  converter.cpp  format.cpp  formatter.cpp  formatting.cpp  formatting_info.hpp  generator.cpp  info.cpp  info_impl.hpp  ios_prop.hpp  message.cpp  mo_file.cpp  mo_file.hpp  mo_hash.h  mo_hash.hpp  mo_lambda.cpp  mo_lambda.hpp  test.cpp  uconv.hpp
libs/locale/: CMakeLists.txt
libs/locale/doc/: Doxyfile  appendix.txt  boundary_analysys.txt  building_boost_locale.txt  charset_handling.txt  conversions.txt  create_toc.pl  dates_times_timezones.txt  default_encoding_under_windows.txt  footer.html  formatting_and_parsing.txt  gendoc.sh  gettext_for_windows.txt  glossary.txt  header.html  index.html  index.txt  locale_gen.txt  localized_text_formatting.txt  main.txt  messages_formatting.txt  rationale.txt  recommendations_and_myths.txt  status_of_cpp0x_characters_support.txt  std_locales.txt  tested_compilers_and_paltforms.txt  tut_header.html  tutorial-doxy.txt  tutorial.old  tutorial.txt  using_localization_backends.txt  working_with_multiple_locales.txt
libs/locale/examples/: boundary.cpp  calendar.cpp  collate.cpp  conversions.cpp  hello.cpp  wboundary.cpp  wconversions.cpp  whello.cpp
libs/locale/performance/: perf_collate.cpp  perf_convert.cpp  perf_format.cpp
libs/locale/src/: boundary.cpp  codepage.cpp  collator.cpp  collator.hpp  conversion.cpp  converter.cpp  date_time.cpp  format.cpp  formatter.cpp  formatter.hpp  formatting.cpp  formatting_info.hpp  generator.cpp  icu_util.hpp  info.cpp  info_impl.hpp  ios_prop.hpp  message.cpp  mo_hash.hpp  mo_lambda.cpp  mo_lambda.hpp  numeric.hpp  test.cpp  time_zone.cpp  time_zone_impl.hpp  timezone.cpp  timezone_impl.hpp  uconv.hpp
libs/locale/src/encoding/: codepage.cpp  conv.h  conv.hpp  iconv_codepage.cpp  iconv_codepage.hpp  iconv_codepage.ipp  performance_test.cpp  uconv_codepage.cpp  uconv_codepage.hpp  uconv_codepage.ipp  wconv_codepage.cpp  wconv_codepage.hpp  wconv_codepage.ipp
libs/locale/src/icu/: all_generator.hpp  boundary.cpp  boundary.hpp  cdata.hpp  codecvt.cpp  codecvt.hpp  codepage.cpp  collator.cpp  conversion.cpp  conversion.hpp  date_time.cpp  default_time_zone.hpp  formatter.cpp  formatter.hpp  icu_backend.cpp  icu_backend.hpp  icu_util.hpp  info.cpp  numeric.cpp  predefined_formatters.hpp  text_bridge.hpp  time_zone.cpp  time_zone.hpp  time_zone_impl.hpp  uconv.hpp
libs/locale/src/posix/: all_generator.hpp  codecvt.cpp  codecvt.hpp  collate.cpp  converter.cpp  info.cpp  numeric.cpp  posix_backend.cpp  posix_backend.hpp
libs/locale/src/shared/: date_time.cpp  format.cpp  formatting.cpp  generator.cpp  ids.cpp  ios_prop.hpp  localization_backend.cpp  message.cpp  message.hpp  mo_hash.hpp  mo_lambda.cpp  mo_lambda.hpp
libs/locale/src/std/: all_generator.hpp  codecvt.cpp  collate.cpp  converter.cpp  find_locale_name.hpp  info.cpp  locale_data.hpp  numeric.cpp  std_backend.cpp  std_backend.hpp  windows_locale_name.cpp  windows_locale_name.hpp
libs/locale/src/util/: codecvt_converter.cpp  codecvt_converter.hpp  default_locale.cpp  default_locale.hpp  gregorian.cpp  gregorian.hpp  iconv.hpp  info.cpp  info.hpp  locale_data.cpp  locale_data.hpp  numeric.hpp  timezone.hpp
libs/locale/src/win32/: all_generator.hpp  api.hpp  collate.cpp  converter.cpp  info.cpp  lcid.cpp  lcid.hpp  numeric.cpp  win_backend.cpp  win_backend.hpp
libs/locale/test/: Jamfile.v2  generate_catalogs.sh  numeric.cpp  strings.h  test_biter_perf.cpp  test_boundary.cpp  test_codepage.cpp  test_codepage_converter.cpp  test_collate.cpp  test_config.cpp  test_convert.cpp  test_date_time.cpp  test_formatting.cpp  test_generator.cpp  test_icu_test_bridge.cpp  test_icu_vs_os_timezone.cpp  test_ios_prop.cpp  test_locale.hpp  test_locale_tools.hpp  test_message.cpp  test_posix_collate.cpp  test_posix_convert.cpp  test_posix_formatting.cpp  test_posix_tools.hpp  test_std_collate.cpp  test_std_convert.cpp  test_std_formatting.cpp  test_winapi_collate.cpp  test_winapi_convert.cpp  test_winapi_formatting.cpp
libs/locale/test/he/LC_MESSAGES/: default.mo  default.po
